--- a/src/main/resources/createInternetOrder.fxml
+++ b/src/main/resources/createInternetOrder.fxml
@@ -47,7 +47,7 @@
       <Button fx:id="acceptButton" layoutX="209.0" layoutY="409.0" mnemonicParsing="false" text="Оформить заказ" />
       <TextField fx:id="nameItemField" layoutX="130.0" layoutY="40.0" prefHeight="25.0" prefWidth="100.0" />
       <Label layoutX="130.0" layoutY="23.0" text="Название" />
-      <TextField fx:id="costItemFiedl" layoutX="130.0" layoutY="82.0" prefHeight="25.0" prefWidth="58.0" />
+      <TextField fx:id="costItemFiedl" layoutX="130.0" layoutY="82.0" prefHeight="25.0" prefWidth="58.0" promptText="руб." />
       <Label layoutX="130.0" layoutY="65.0" text="Цена" />
       <Label layoutX="130.0" layoutY="107.0" text="Описание" />
       <TextArea fx:id="descriptionItemArea" layoutX="130.0" layoutY="124.0" prefHeight="45.0" prefWidth="183.0" />
